--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,64 @@ body {
     padding: 0;
     font-family: 'Oswald', sans-serif;
 }
+
+h1 {
+    font-size: 45px;
+}
+
+a {
+    text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h5 {
+    color: #575757;
+}
+
+p {
+    color: #828282;
+    margin-bottom: 40px;
+}
+
+img {
+    width: 100%;
+}
+
+section {
+    margin: 70px 70px 0;
+}
+
+.orange-color {
+    color: #FB8B47;
+}
+
+.flexible-container {
+    display: flex;
+}
+
+.half-width {
+    width: 50%;
+}
+
+.order-food-info {
+    width: 40%;
+    margin-right: 10%;
+}
+
+.linked-button {
+    background-image: linear-gradient(to left, #eb2ab0, #ef6fc4);
+    color: #ffffff;
+    box-shadow: 0 4px 8px 0 #ef6fc4, 0 6px 20px 0 #ef6fc4;
+    padding: 13px 40px;
+    border-radius: 25px;
+    display: inline-block;
+}
+
+.order-food-guy {
+    width: 40%;
+    margin-left: 10%;
+}
