--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,20 @@ body {
     font-family: 'Oswald', sans-serif;
 }
 
+.mb-100 {
+    margin-bottom: 100px;
+}
+
 h1 {
     font-size: 45px;
 }
 
 h2 {
     font-size: 35px;
+}
+
+h3 {
+    font-size: 20px;
 }
 
 a {
@@ -27,7 +35,6 @@ h5 {
 
 p {
     color: #828282;
-    margin-bottom: 40px;
 }
 
 img {
@@ -89,4 +96,34 @@ section {
 
 .about-me-info p {
     margin-bottom: 50px;
+}
+
+.single-recipie {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-right: 20px;
+    padding: 30px;
+    border-radius: 25px;
+}
+
+.single-recipie h3 {
+    color: #000000;
+    font-weight: bold;
+}
+
+.no-margin {
+    margin-right: 0;
+}
+
+.social-media {
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+    border-radius: 25px;
+    padding: 20px;
+}
+
+.social-media h3 {
+    font-size: 25px;
+}
+
+.single-media {
+    text-align: center;
 }
